Add JOL memory footprint test comparing OrderedHashMap to LinkedHashMap.
Assisted-by: Claude:claude-fable-5-1